--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </li>
     </ul>
     <ul>
-      <li><a href=""></a>insta</li>
-      <li><a href=""></a>fb</li>
-      <li><a href=""></a>twit</li>
+      <li><a href="" target="_blank"></a>insta</li>
+      <li><a href="" target="_blank"></a>fb</li>
+      <li><a href="" target="_blank"></a>twit</li>
     </ul>
   </body>
 </html>
