--- a/index.html
+++ b/index.html
@@ -3,28 +3,200 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chokolate</title>
+    <title>Chocolate</title>
   </head>
   <body>
-    <a href=""
-      >SIMPLY CHOCOLATE
-      <img src="./img/chocolate-icon.svg" alt="chocolate icon" />
-    </a>
-    <ul>
-      <li>
-        <a href="">Home</a>
-      </li>
-      <li>
-        <a href="">How it’s made?</a>
-      </li>
-      <li>
-        <a href="">Chocolate is loved</a>
-      </li>
-    </ul>
-    <ul>
-      <li><a href="" target="_blank"></a>insta</li>
-      <li><a href="" target="_blank"></a>fb</li>
-      <li><a href="" target="_blank"></a>twit</li>
-    </ul>
+    <nav>
+      <a href=""
+        >SIMPLY CHOCOLATE
+        <img src="./img/chocolate-icon.svg" alt="chocolate icon" />
+      </a>
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">How it’s made?</a>
+        </li>
+        <li>
+          <a href="">Chocolate is loved</a>
+        </li>
+      </ul>
+      <ul>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>insta</li>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>fb</li>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>twit</li>
+      </ul>
+    </nav>
+    <main>
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+        <button type="button">Buy now</button>
+        <a href="">How it’s made</a>
+        <a href="">scroll down</a>
+      </section>
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3>Unsurpassed taste</h3>
+            <p>
+              Crafted with the finest quality cocoa beans and a dedication to
+              perfection, each bite is a decadent experience that simply cannot
+              be matched. Savor the richness and complexity of our Unsurpassed
+              Taste and discover a new level of chocolate bliss.
+            </p>
+          </li>
+          <li>
+            <h3>Affordable price</h3>
+            <p>
+              Indulge in high-quality chocolate without breaking the bank with
+              Simply Chocolate's selection of affordable treats. Enjoy
+              mouth-watering truffles and velvety chocolate bars without
+              sacrificing taste or quality. Browse our selection and indulge in
+              affordable luxury today.
+            </p>
+          </li>
+          <li>
+            <h3>Own production</h3>
+            <p>
+              We take pride in our own production process, ensuring that every
+              step is carefully crafted to perfection. From selecting the finest
+              ingredients to handcrafting each piece, our attention to detail is
+              evident in every bite.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
+        <p>
+          At Simply Chocolate, we believe that the secret to exceptional
+          chocolate is in the details. From the sourcing of the finest
+          ingredients to the careful crafting of each individual piece, every
+          step of our process adds up to one exceptional taste sensation.
+        </p>
+        <ul>
+          <li>
+            <img src="./img/img-1.png" alt="" width="214" height="160" />
+            <h3>MILK CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./img/img-2.png" alt="" width="214" height="160" />
+            <h3>MILK</h3>
+          </li>
+          <li>
+            <img src="./img/img-3.png" alt="" width="214" height="160" />
+            <h3>NUTS</h3>
+          </li>
+          <li>
+            <img src="./img/img-4.png" alt="" width="214" height="160" />
+            <h3>SEMI - SWEET CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./img/img-5.png" alt="" width="214" height="160" />
+            <h3>CACAO</h3>
+          </li>
+          <li>
+            <img src="./img/img-6.png" alt="" width="214" height="160" />
+            <h3>RASPBERRY</h3>
+          </li>
+          <li>
+            <img src="./img/img-7.png" alt="" width="214" height="160" />
+            <h3>COCONUT OIL</h3>
+          </li>
+          <li>
+            <img src="./img/img-8.png" alt="" width="214" height="160" />
+            <h3>VANILLA</h3>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>HOW IT’S MADE?</h2>
+        <h3>
+          <p>
+            Try our chocolates today and discover the perfect balance of flavor
+          </p>
+        </h3>
+        <ul>
+          <li>
+            <p>
+              Heat the milk in a saucepan without bringing it to a boil. Add
+              sugar and cocoa powder.
+            </p>
+          </li>
+          <li>
+            <p>
+              At the same time, prepare a water bath. Melt the butter on it.
+            </p>
+          </li>
+          <li>
+            <p>
+              "Mix" the milk mixture and already liquid butter. Mix thoroughly
+              with a silicone spatula so that the mass becomes uniform and
+              silky.
+            </p>
+          </li>
+          <li>
+            <p>Heat the mixture over low heat, letting it barely boil.</p>
+          </li>
+          <li>
+            <p>
+              Pour the chocolate into special containers (can be replaced with
+              ice molds). Allow to cool and harden.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>OUR PRODUCTS</h2>
+        <ul>
+          <li>
+            <img src="./img/img-1-orange-dark.jpg" alt="" />
+            <h3>orange</h3>
+            <p>Dark chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-2-apple-cranberry.jpg" alt="" />
+            <h3>APPLE&CRANBERRY</h3>
+            <p>Milk chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-3-lime-seasalt.jpg" alt="" />
+            <h3>lime&sea salt</h3>
+            <p>Dark chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-4-pineapple.jpg" alt="" />
+            <h3>pineapple</h3>
+            <p>Dark chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-5-classic-milk.jpg" alt="" />
+            <h3>Classic</h3>
+            <p>Milk chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-6-honey.jpg" alt="" />
+            <h3>honey</h3>
+            <p>Milk chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-7-roasted.jpg" alt="" />
+            <h3>Roasted fruits</h3>
+            <p>Dark chocolate</p>
+          </li>
+          <li>
+            <img src="./img/img-8-white.jpg" alt="" />
+            <h3>Classic</h3>
+            <p>White chocolate</p>
+          </li>
+        </ul>
+      </section>
+      <section></section>
+    </main>
   </body>
 </html>
