--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="">scroll down</a>
       </section>
       <section>
-        <h2></h2>
+        <h2 hidden>Features</h2>
         <ul>
           <li>
             <h3>Unsurpassed taste</h3>
@@ -81,45 +81,64 @@
         </p>
         <ul>
           <li>
-            <img src="./img/img-1.png" alt="" width="214" height="160" />
+            <img
+              src="./img/img-1.png"
+              alt="Milk chocolate"
+              width="214"
+              height="160"
+            />
             <h3>MILK CHOCOLATE</h3>
           </li>
           <li>
-            <img src="./img/img-2.png" alt="" width="214" height="160" />
+            <img src="./img/img-2.png" alt="Milk" width="214" height="160" />
             <h3>MILK</h3>
           </li>
           <li>
-            <img src="./img/img-3.png" alt="" width="214" height="160" />
+            <img src="./img/img-3.png" alt="Nuts" width="214" height="160" />
             <h3>NUTS</h3>
           </li>
           <li>
-            <img src="./img/img-4.png" alt="" width="214" height="160" />
+            <img
+              src="./img/img-4.png"
+              alt="Sweet chocolate"
+              width="214"
+              height="160"
+            />
             <h3>SEMI - SWEET CHOCOLATE</h3>
           </li>
           <li>
-            <img src="./img/img-5.png" alt="" width="214" height="160" />
+            <img src="./img/img-5.png" alt="Cocoa" width="214" height="160" />
             <h3>CACAO</h3>
           </li>
           <li>
-            <img src="./img/img-6.png" alt="" width="214" height="160" />
+            <img
+              src="./img/img-6.png"
+              alt="RASPBERRY"
+              width="214"
+              height="160"
+            />
             <h3>RASPBERRY</h3>
           </li>
           <li>
-            <img src="./img/img-7.png" alt="" width="214" height="160" />
+            <img src="./img/img-7.png" alt="COCONUT" width="214" height="160" />
             <h3>COCONUT OIL</h3>
           </li>
           <li>
-            <img src="./img/img-8.png" alt="" width="214" height="160" />
+            <img src="./img/img-8.png" alt="VANILLA" width="214" height="160" />
             <h3>VANILLA</h3>
           </li>
         </ul>
       </section>
       <section>
         <h2>HOW IT’S MADE?</h2>
+        <img
+          src="./img/image-chocolate-made.jpg"
+          alt="liquid Chocolate"
+          width="600"
+          height="400"
+        />
         <h3>
-          <p>
-            Try our chocolates today and discover the perfect balance of flavor
-          </p>
+          Try our chocolates today and discover the perfect balance of flavor
         </h3>
         <ul>
           <li>
@@ -155,48 +174,205 @@
         <h2>OUR PRODUCTS</h2>
         <ul>
           <li>
-            <img src="./img/img-1-orange-dark.jpg" alt="" />
+            <img
+              src="./img/img-1-orange-dark.jpg"
+              alt="Dark chocolate"
+              width="230"
+              height="201"
+            />
             <h3>orange</h3>
             <p>Dark chocolate</p>
+            <button type="button">45</button>
           </li>
           <li>
-            <img src="./img/img-2-apple-cranberry.jpg" alt="" />
+            <img
+              src="./img/img-2-apple-cranberry.jpg"
+              alt="Milk chocolate"
+              width="230"
+              height="201"
+            />
             <h3>APPLE&CRANBERRY</h3>
             <p>Milk chocolate</p>
+            <button type="button">50</button>
           </li>
           <li>
-            <img src="./img/img-3-lime-seasalt.jpg" alt="" />
+            <img
+              src="./img/img-3-lime-seasalt.jpg"
+              alt="lime&sea salt"
+              width="230"
+              height="201"
+            />
             <h3>lime&sea salt</h3>
             <p>Dark chocolate</p>
+            <button type="button">66</button>
           </li>
           <li>
-            <img src="./img/img-4-pineapple.jpg" alt="" />
+            <img
+              src="./img/img-4-pineapple.jpg"
+              alt="pineapple chocolate"
+              width="230"
+              height="201"
+            />
             <h3>pineapple</h3>
             <p>Dark chocolate</p>
+            <button type="button">54</button>
           </li>
           <li>
-            <img src="./img/img-5-classic-milk.jpg" alt="" />
+            <img
+              src="./img/img-5-classic-milk.jpg"
+              alt="Milk chocolate"
+              width="230"
+              height="201"
+            />
             <h3>Classic</h3>
             <p>Milk chocolate</p>
+            <button type="button">45</button>
           </li>
           <li>
-            <img src="./img/img-6-honey.jpg" alt="" />
-            <h3>honey</h3>
+            <img
+              src="./img/img-6-honey.jpg"
+              alt="Honey chocolate"
+              width="230"
+              height="201"
+            />
+            <h3>Honey</h3>
             <p>Milk chocolate</p>
+            <button type="button">50</button>
           </li>
           <li>
-            <img src="./img/img-7-roasted.jpg" alt="" />
+            <img
+              src="./img/img-7-roasted.jpg"
+              alt="Roasted fruits"
+              width="230"
+              height="201"
+            />
             <h3>Roasted fruits</h3>
             <p>Dark chocolate</p>
+            <button type="button">66</button>
           </li>
           <li>
-            <img src="./img/img-8-white.jpg" alt="" />
+            <img
+              src="./img/img-8-white.jpg"
+              alt="White chocolate"
+              width="230"
+              height="201"
+            />
             <h3>Classic</h3>
             <p>White chocolate</p>
+            <button type="button">54</button>
           </li>
         </ul>
       </section>
-      <section></section>
+      <section>
+        <h2>Top sellers</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/sellers-img-1.jpg"
+              alt="Chocolate with nuts"
+              width="368"
+              height="464"
+            />
+            <h3>Chocolate with nuts</h3>
+          </li>
+          <li>
+            <img
+              src="./img/sellers-img-2.jpg"
+              alt="Cocolate widt fruits"
+              width="368"
+              height="464"
+            />
+            <h3>Cocolate widt fruits</h3>
+          </li>
+          <li>
+            <img
+              src="./img/sellers-img-3.jpg"
+              alt="Dark chocolate"
+              width="368"
+              height="464"
+            />
+            <h3>Dark chocolate</h3>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>chocolate is loved</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/loved-img-1.jpg"
+              alt="Victoria Dobrzhanska"
+              width="80"
+              height="80"
+            />
+            <h3>Victoria Dobrzhanska</h3>
+            <p>
+              I love this chocolate bar. Perfect combination of light crispy
+              wafer, covered in a thin layer chocolate.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./img/loved-img-2.jpg"
+              alt="Nazar Babenko"
+              width="80"
+              height="80"
+            />
+            <h3>Nazar Babenko</h3>
+            <p>
+              This chocolate confection is a delight! A delight! The wafer is
+              light and crisp, the hazelnut cream is smooth, and the chocolate
+              is good.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./img/loved-img-3.jpg"
+              alt="Olena Kampusch"
+              width="80"
+              height="80"
+            />
+            <h3>Olena Kampusch</h3>
+            <p>
+              Chocolate is a family favourite treat. Love the delicious smooth
+              chocolate and the creaminess inside. The wafer is soft but
+              crunchy.
+            </p>
+          </li>
+        </ul>
+        <button type="button">Leave a review</button>
+      </section>
     </main>
+    <footer>
+      <p>Chocolate a delicious cure for a bad day</p>
+      <p>Social networks</p>
+      <ul>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>insta</li>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>fb</li>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a>twit</li>
+      </ul>
+      <p>Contact us</p>
+      <address>
+        <ul>
+          <li><a href="tel:+380684439426"></a>+380 (68) 443-94-26</li>
+          <li>
+            <a href="mailto:simplychoc@gmail.com"></a>simplychoc@gmail.com
+          </li>
+        </ul>
+      </address>
+      <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">How it’s made?</a>
+          </li>
+          <li>
+            <a href="">Chocolate is loved</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
