--- a/index.html
+++ b/index.html
@@ -15,69 +15,74 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="">
-          <span class="header-logo-italic">SIMPLY</span> CHOCOLATE
-          <img
-            class="header-logo-img"
-            src="./img/chocolate-icon.svg"
-            alt="chocolate icon"
-          />
-        </a>
-        <ul class="header-menu-list">
-          <li class="header-menu-item">
-            <a href="" class="header-menu-link">Home</a>
-          </li>
-          <li class="header-menu-item">
-            <a href="" class="header-menu-link">How it’s made?</a>
-          </li>
-          <li>
-            <a href="" class="header-menu-link">Chocolate is loved</a>
-          </li>
-        </ul>
-        <ul class="header-soc-lisl">
-          <li>
-            <a
-              class="header-soc-item"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-            ></a
-            >insta
-          </li>
-          <li class="header-soc-item">
-            <a
-              class="header-soc-link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-            ></a
-            >fb
-          </li>
-          <li class="header-soc-item">
-            <a
-              class="header-soc-link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-            ></a
-            >twit
-          </li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="header-navigation">
+          <a class="header-logo" href="">
+            <span class="header-logo-italic">SIMPLY</span> CHOCOLATE
+            <img
+              class="header-logo-img"
+              src="./img/chocolate-icon.svg"
+              alt="chocolate icon"
+            />
+          </a>
+          <ul class="header-menu-list">
+            <li class="header-menu-item">
+              <a href="" class="header-menu-link">Home</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="" class="header-menu-link">How it’s made?</a>
+            </li>
+            <li>
+              <a href="" class="header-menu-link">Chocolate is loved</a>
+            </li>
+          </ul>
+          <ul class="header-soc-lisl">
+            <li>
+              <a
+                class="header-soc-item"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a
+              >insta
+            </li>
+            <li class="header-soc-item">
+              <a
+                class="header-soc-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a
+              >fb
+            </li>
+            <li class="header-soc-item">
+              <a
+                class="header-soc-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a
+              >twit
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
-        <button type="button" class="hero-buy-btn">Buy now</button>
-        <a href="#made" class="hero-made-btn">How it’s made</a>
-        <a href="" class="hero-down-btn">scroll down</a>
+        <div class="container hero-container">
+          <h1 class="hero-title">
+            Treat yourself or a loved one to our finest ingredients for a moment
+            of pure delight!
+          </h1>
+          <button type="button" class="hero-buy-btn">Buy now</button>
+          <a href="#made" class="hero-made-btn">How it’s made</a>
+          <a href="" class="hero-down-btn">scroll down</a>
+        </div>
       </section>
       <section class="features">
         <h2 class="visually-hidden">Features</h2>
+        <div class="container">
         <ul class="features-list">
           <li class="features-item">
             <h3 class="features-subtitle">Unsurpassed taste</h3>
@@ -108,101 +113,105 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="taste">
-        <h2 class="taste-title section-title">
-          IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION
-        </h2>
-        <p class="taste-text">
-          At Simply Chocolate, we believe that the secret to exceptional
-          chocolate is in the details. From the sourcing of the finest
-          ingredients to the careful crafting of each individual piece, every
-          step of our process adds up to one exceptional taste sensation.
-        </p>
-        <ul class="taste-list">
-          <li class="taste-item">
-            <img
-              src="./img/img-1.png"
-              alt="Milk chocolate"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">MILK CHOCOLATE</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-2.png"
-              alt="Milk"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">MILK</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-3.png"
-              alt="Nuts"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">NUTS</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-4.png"
-              alt="Sweet chocolate"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">SEMI - SWEET CHOCOLATE</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-5.png"
-              alt="Cocoa"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">CACAO</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-6.png"
-              alt="RASPBERRY"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">RASPBERRY</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-7.png"
-              alt="COCONUT"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">COCONUT OIL</h3>
-          </li>
-          <li class="taste-item">
-            <img
-              src="./img/img-8.png"
-              alt="VANILLA"
-              width="214"
-              height="160"
-              class="taste-img"
-            />
-            <h3 class="taste-subtitle">VANILLA</h3>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="taste-title section-title">
+            IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION
+          </h2>
+          <p class="taste-text">
+            At Simply Chocolate, we believe that the secret to exceptional
+            chocolate is in the details. From the sourcing of the finest
+            ingredients to the careful crafting of each individual piece, every
+            step of our process adds up to one exceptional taste sensation.
+          </p>
+          <ul class="taste-list">
+            <li class="taste-item">
+              <img
+                src="./img/img-1.png"
+                alt="Milk chocolate"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">MILK CHOCOLATE</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-2.png"
+                alt="Milk"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">MILK</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-3.png"
+                alt="Nuts"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">NUTS</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-4.png"
+                alt="Sweet chocolate"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">SEMI - SWEET CHOCOLATE</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-5.png"
+                alt="Cocoa"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">CACAO</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-6.png"
+                alt="RASPBERRY"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">RASPBERRY</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-7.png"
+                alt="COCONUT"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">COCONUT OIL</h3>
+            </li>
+            <li class="taste-item">
+              <img
+                src="./img/img-8.png"
+                alt="VANILLA"
+                width="214"
+                height="160"
+                class="taste-img"
+              />
+              <h3 class="taste-subtitle">VANILLA</h3>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="made" class="made">
+        <div class="container">
         <h2 class="made-title section-title">HOW IT’S <span>MADE?</span></h2>
         <img
           src="./img/image-chocolate-made.jpg"
@@ -245,8 +254,10 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="products">
+        <div class="container">
         <h2 class="products-title section-title">OUR <span>PRODUCTS</span></h2>
         <ul class="products-list">
           <li class="products-item">
@@ -381,8 +392,10 @@
             <h3 class="sellers-subtitle">Dark chocolate</h3>
           </li>
         </ul>
+      </div>
       </section>
       <section class="loved">
+        <div class="container">
         <h2 class="loved-title section-title">
           <span>chocolate</span> is loved
         </h2>
@@ -434,6 +447,7 @@
         </ul>
         <button type="button" class="loved-btn-review">Leave a review</button>
       </section>
+    </div>
     </main>
     <footer class="footer">
       <p class="footer-heading">
