--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
           <div class="hero-buttons">
             <button type="button" class="hero-buy-btn">Buy now</button>
             <a href="#made" class="hero-made-btn">How it’s made</a>
-            <a href="" class="hero-down-btn">scroll down</a>
+            <a href="" class="hero-down-btn"
+              >scroll down
+              <svg width="38" height="38" class="scroll-icon">
+                <use href="./img/icons-chocolate.svg#icon-hero-scroll"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
@@ -384,33 +389,65 @@
         <div class="sellers-container container">
           <ul class="sellers-list">
             <li class="sellers-item">
-              <img
-                src="./img/sellers-img-1.jpg"
-                alt="Chocolate with nuts"
-                width="368"
-                height="464"
-                class="sellers-img"
-              />
+              <div class="cover-wrap">
+                <img
+                  src="./img/sellers-img-1.jpg"
+                  alt="Chocolate with nuts"
+                  width="368"
+                  height="464"
+                  class="sellers-img"
+                />
+                <div class="overlay-wrap">
+                  <p class="sellers-overlay">
+                    Chocolate with nuts is a delectable combination that brings
+                    together the smoothness of chocolate and the crunchiness of
+                    nuts. Whether it's milk chocolate, dark chocolate, or white
+                    chocolate, the addition of nuts adds a whole new dimension
+                    of flavor and texture.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">Chocolate with nuts</h3>
             </li>
             <li class="sellers-item">
-              <img
-                src="./img/sellers-img-2.jpg"
-                alt="Cocolate widt fruits"
-                width="368"
-                height="464"
-                class="sellers-img"
-              />
+              <div class="cover-wrap">
+                <img
+                  src="./img/sellers-img-2.jpg"
+                  alt="Cocolate widt fruits"
+                  width="368"
+                  height="464"
+                  class="sellers-img"
+                />
+                <div class="overlay-wrap">
+                  <p class="sellers-overlay">
+                    Chocolate with fruit is an unbeatable combination of two of
+                    the tastiest things in the world. This dessert combines
+                    delicate and aromatic chocolate with fresh and juicy fruits,
+                    creating a true poetry of taste.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">Cocolate widt fruits</h3>
             </li>
             <li class="sellers-item">
-              <img
-                src="./img/sellers-img-3.jpg"
-                alt="Dark chocolate"
-                width="368"
-                height="464"
-                class="sellers-img"
-              />
+              <div class="cover-wrap">
+                <img
+                  src="./img/sellers-img-3.jpg"
+                  alt="Dark chocolate"
+                  width="368"
+                  height="464"
+                  class="sellers-img"
+                />
+                <div class="overlay-wrap">
+                  <p class="sellers-overlay">
+                    Dark chocolate is a rich and indulgent treat that is beloved
+                    by many chocolate enthusiasts. It is made from cocoa beans,
+                    which are roasted, ground, and then processed to produce
+                    chocolate liquor. Dark chocolate contains a higher
+                    percentage of cocoa solids compared to milk chocolate.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">Dark chocolate</h3>
             </li>
           </ul>
@@ -474,54 +511,120 @@
     </main>
 
     <footer class="footer">
-      <p class="footer-heading">
-        <span>Chocolate</span> a delicious cure for a bad day
-      </p>
-      <div class="footer-soc-container">
-        <p class="footer-subtitle">Social networks</p>
-        <ul class="footer-soc-list">
-          <li class="footer-soc-link">
-            <a href="" target="_blank" rel="noopener noreferrer">insta</a>
-          </li>
-          <li class="footer-soc-link">
-            <a href="" target="_blank" rel="noopener noreferrer">fb</a>
-          </li>
-          <li class="footer-soc-link">
-            <a href="" target="_blank" rel="noopener noreferrer">twit</a>
-          </li>
-        </ul>
+        <div class="footer-top-container">
+          <p class="footer-heading">
+            <span>Chocolate</span> a delicious cure for a bad day
+          </p>
+          <div class="footer-soc-container">
+            <p class="footer-subtitle">Social networks</p>
+              <ul class="footer-soc-list">
+                <li class="footer-soc-link">
+                  <a href="" target="_blank" rel="noopener noreferrer"
+                    ><svg width="24" height="24" class="footer-soc-icon">
+                      <use href="./img/icons-chocolate.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="footer-soc-link">
+                  <a href="" target="_blank" rel="noopener noreferrer"
+                    ><svg width="24" height="24" class="footer-soc-icon">
+                      <use href="./img/icons-chocolate.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="footer-soc-link">
+                  <a href="" target="_blank" rel="noopener noreferrer"
+                    ><svg width="24" height="24" class="footer-soc-icon">
+                      <use href="./img/icons-chocolate.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-addres-container">
+              <p class="footer-subtitle">Contact us</p>
+              <address class="footer-addres">
+                <ul class="footer-addres-list">
+                  <li class="footer-addres-item">
+                    <a class="footer-addres-link" href="tel:+380684439426"></a>+380
+                    (68) 443-94-26
+                  </li>
+                  <li class="footer-addres-item">
+                    <a
+                      class="footer-addres-link"
+                      href="mailto:simplychoc@gmail.com"
+                    ></a
+                    >simplychoc@gmail.com
+                  </li>
+                </ul>
+              </address>
+            </div>
+          </div>
+        <div class="footer-bottom-container">
+          <nav class="footer-navigation">
+            <ul class="footer-navigation-list">
+              <li class="footer-navigation-item">
+                <a class="footer-navigation-link" href="">Home</a>
+              </li>
+              <li class="footer-navigation-item">
+                <a class="footer-navigation-link" href="">How it’s made?</a>
+              </li>
+              <li class="footer-navigation-item">
+                <a class="footer-navigation-link" href="">Chocolate is loved</a>
+              </li>
+            </ul>
+          </nav>
+          <form class="footer-form">
+                <input
+                  type="email"
+                  name="footer-email"
+                  class="footer-input"
+                  placeholder="Enter your email"
+                  aria-label="footer input"
+                />
+                <button type="submit" class="footer-form-btn">Subscribe</button>
+              </form>
+        <div class="modal-field">
+              <label class="modal-label"
+                ><span>Phone number</span>
+                <input
+                  type="tel"
+                  required
+                  name="user-tel"
+                  class="modal-input"
+                  placeholder="User phone"
+                  value="+380"
+                />
+              </label>
+            </div>
       </div>
-      <div class="footer-addres-container">
-        <p class="footer-subtitle">Contact us</p>
-        <address class="footer-addres">
-          <ul class="footer-addres-list">
-            <li class="footer-addres-item">
-              <a class="footer-addres-link" href="tel:+380684439426"></a>+380
-              (68) 443-94-26
-            </li>
-            <li class="footer-addres-item">
-              <a
-                class="footer-addres-link"
-                href="mailto:simplychoc@gmail.com"
-              ></a
-              >simplychoc@gmail.com
-            </li>
-          </ul>
-        </address>
+          <div class="modal-field">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-text"
+              placeholder="Enter text"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="policy"
+              id="policy"
+              class="check-input visually-hidden"
+              value="true"
+            />
+            <label for="policy" class="check-text">
+              <span>
+                <svg class="check-icon" width="10" height="10">
+                  <use href="./img/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit">Send</button>
+        </form>
       </div>
-      <nav class="footer-navigation">
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">Home</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">How it’s made?</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">Chocolate is loved</a>
-          </li>
-        </ul>
-      </nav>
     </footer>
   </body>
 </html>
